Project

General

Profile

Actions

Bug #42578

closed

ceph device show-health-metrics foo crashes mgr

Added by Dan Mick over 4 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

An unknown dev name is not handled. I think it's in ActivePyModules::get_python, but that code is past my comprehension right now.

Traceback:

     0> 2019-10-31 03:13:43.196 7f4c90f2d700 -1 *** Caught signal (Segmentation 
fault) **
 in thread 7f4c90f2d700 thread_name:mgr-fin

 ceph version 14.2.1-630-g172fdf3 (172fdf398719f8898113cdb03285a7906f54f1ae) nau
tilus (stable)
 1: (()+0x11390) [0x7f4ca6c78390]
 2: (PyEval_EvalFrameEx()+0x211) [0x7f4ca719f171]
 3: (PyEval_EvalFrameEx()+0x7124) [0x7f4ca71a6084]
 4: (PyEval_EvalFrameEx()+0x7124) [0x7f4ca71a6084]
 5: (PyEval_EvalFrameEx()+0x7124) [0x7f4ca71a6084]
 6: (PyEval_EvalCodeEx()+0x85c) [0x7f4ca72dd11c]
 7: (()+0x13e3b0) [0x7f4ca72333b0]
 8: (PyObject_Call()+0x43) [0x7f4ca72062b3]
 9: (()+0x18546c) [0x7f4ca727a46c]
 10: (PyObject_Call()+0x43) [0x7f4ca72062b3]
 11: (PyObject_CallMethod()+0xf4) [0x7f4ca7207484]
 12: (ActivePyModule::handle_command(std::map<std::__cxx11::basic_string<char, s
td::char_traits<char>, std::allocator<char> >, boost::variant<std::__cxx11::basi
c_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, doubl
e, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::all
ocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits
<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, st
d::vector<double, std::allocator<double> > >, std::less<void>, std::allocator<st
d::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<
char> > const, boost::variant<std::__cxx11::basic_string<char, std::char_traits<
char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::bas
ic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<s
td::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >
 >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator
<double> > > > > > const&, ceph::buffer::v14_2_0::list const&, std::__cxx11::bas
ic_stringstream<char, std::char_traits<char>, std::allocator<char> >*, std::__cx
x11::basic_stringstream<char, std::char_traits<char>, std::allocator<char> >*)+0
x229) [0x5034e9]
 13: /usr/bin/ceph-mgr() [0x5516f4]
 14: (FunctionContext::finish(int)+0x29) [0x514c49]
 15: (Context::complete(int)+0x9) [0x511a29]
 16: (Finisher::finisher_thread_entry()+0x16e) [0x7f4ca79adb5e]
 17: (()+0x76ba) [0x7f4ca6c6e6ba]
 18: (clone()+0x6d) [0x7f4ca649741d]
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to int
erpret this.


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #42647: mimic: ceph device show-health-metrics foo crashes mgrRejectedActions
Copied to Ceph - Backport #42648: nautilus: ceph device show-health-metrics foo crashes mgrResolvedSage WeilActions
Actions #1

Updated by Sage Weil over 4 years ago

  • Status changed from New to Fix Under Review
  • Priority changed from Normal to Urgent
  • Backport set to nautilus, mimic
  • Pull request ID set to 31291
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42647: mimic: ceph device show-health-metrics foo crashes mgr added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42648: nautilus: ceph device show-health-metrics foo crashes mgr added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF