mgr/ActivePyModules: behave if a module queries a devid that does not exist

The GIL reacquire was being handled in the lambda, but that was not
getting called if the device didn't exist, leading to a crash.

Add a trivial CLI test.

Fixes: https://tracker.ceph.com/issues/42578
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 67e5139b02518cbc83e5156e2f74a5d22f4d97a4)
(cherry picked from commit b630bb95058052bc10b1c7fb9f1d2bcb5b28b49d)

 Conflicts:
	qa/workunits/cephtool/test.sh - remove irrelevant tests

Resolves: rhbz#1674086